fixing search bar with margin,spacing and height

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -210,7 +210,7 @@ Stripe Styles
 }
 .hero {
   position: relative;
-  min-height: 100vh;
+  height: 100vh;
   margin-top: -5rem;
   display: flex;
   /* grid-template-columns: 1fr; */
@@ -511,7 +511,7 @@ Stripe Styles
   width: 100%;
 }
 .hero-search-content .btn {
-  height: 52px;
+  height: 32px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
